--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 
+
 langchain==0.3.26
 flask==3.1.1
 sentence-transformers==4.1.0
@@ -6,5 +7,8 @@ pypdf==5.6.1
 langchain-pinecone==0.2.8
 langchain-openai==0.3.24
 langchain-community==0.3.26
+
+langchain-core==0.3.77
+
 -e . #for setup.py file
 
